# multilayer-perceptron_EMNIST

./: Analizador_Alfanumerico_AGG.h5  Busqueda_Hiperparametros_MLP.py  README.md  main.py  mejores_resultados.csv  pyproject.toml  requirements.txt  utils.py
